--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>ab</title>
+  </head>
   <body>
     <h1>Bear of the Year</h1>
     <img src="https://mimo.app/r/panda.png" />
