Rewrote test to check for a string contained in a string like: user text "ab a\n c" contains argument string "ab a"

--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>a b\nc.d</title>
+    <title>abc a\n d</title>
   </head>
   <body>
     <h1>Bear of the Year</h1>
