--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>abc a\n d</title>
+    <title>abc \sdgjh d</title>
   </head>
   <body>
     <h1>Bear of the Year</h1>
