add two more tests
More specifically, add two more possible user inputs for the same target sample-text

--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1>Bear of the Year</h1>
+    <h2>abc d</h2>
+    <h3>abc abc \n \n abcd ade d d</h3>
     <img src="https://mimo.app/r/panda.png" />
     <p><em>Nom nom nom</em></p>
     <p>3 votes</p>
