--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -7,6 +7,7 @@
     <h1>Bear of the Year</h1>
     <h2>abc d</h2>
     <h3>abc abc \n \n abcd ade d d</h3>
+    <span>abc</span>
     <img src="https://mimo.app/r/panda.png" />
     <p><em>Nom nom nom</em></p>
     <p>3 votes</p>
